# cme213-project

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  run.sh
reports/: Milestone1.tex  Milestone2.tex  Milestone3.tex
results_tables/: perf_table.tex
scripts/: generate_ref_data.py  plot_perf.py
src/kernels/: attention.cu  attention.cuh  attention_cpu.cpp  attention_cpu.hpp  cross_entropy.cu  cross_entropy.cuh  cross_entropy_cpu.cpp  cross_entropy_cpu.hpp  gelu.cu  gelu.cuh  gelu_cpu.cpp  gelu_cpu.hpp  gemm.cu  gemm.cuh  gemm_cpu.cpp  gemm_cpu.hpp  kernels.cuh  layernorm.cu  layernorm.cuh  layernorm_cpu.cpp  layernorm_cpu.hpp  softmax.cu  softmax.cuh  softmax_cpu.cpp  softmax_cpu.hpp
src/utils/: cuda_check.hpp  tensor.hpp  utils.hpp
tests/: test_attention.cu  test_cross_entropy.cu  test_gelu.cu  test_gemm.cu  test_layernorm.cu  test_softmax.cu  test_utils.hpp  test_vs_pytorch.cu
